--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,41 @@
   border-image-slice: 1;
   border-image-width: 2px;
 }
+
+/* Scrollbar */
+
+.scroll {
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: linear-gradient(
+      90deg,
+      rgb(23, 8, 3),
+      rgb(83, 36, 18) 40%,
+      rgb(23, 8, 3)
+    );
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(
+      to bottom,
+      rgba(184, 134, 45, 0),
+      rgb(184, 134, 45),
+      rgb(255, 223, 145),
+      rgb(184, 134, 45),
+      rgba(184, 134, 45, 0)
+    );
+    border-radius: 5px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: linear-gradient(
+      90deg,
+      rgb(23, 8, 3),
+      rgb(83, 36, 18) 40%,
+      rgb(23, 8, 3)
+    );
+  }
+}
