--- a/src/index.css
+++ b/src/index.css
@@ -76,9 +76,31 @@
 
 /* bgImage={`url(${backgroundImg})`} */
 
-.bg-image {
+/* .bg-image {
   background-image: url(${backgroundImg});
   background-size: cover;
   background-position: center;
   filter: blur(1px) brightness(63%);
+} */
+
+/* Hover effect in Flags */
+
+.shine-effect {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom right,
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0)
+  );
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: -1;
+}
+
+.on-hover:hover .shine-effect {
+  opacity: 0.5;
 }
